Fixed spacing and styles

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -35,7 +35,7 @@
 
 .homepage.banner.wrapper {
   @include utils.full-width-container;
-  padding-top: 56px;
+  margin-top: 32px;
 
   .banner.component {
     background-color: colors.$gray-iron-900;
@@ -126,8 +126,10 @@
   }
 
   @media (max-width: 767px) {
-    padding: 0;
-    padding-bottom: 24px;
+    margin-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
 
     .banner.component {
       border-radius: 0;
