--- a/src/components/ComingSoon/ComingSoon.scss
+++ b/src/components/ComingSoon/ComingSoon.scss
@@ -54,10 +54,9 @@ $container-background: radial-gradient(
       form {
         margin: 0 auto;
         margin-top: 56px;
-        max-width: max-content;
 
         display: flex;
-        gap: 16px;
+        gap: 8px;
         justify-content: center;
         position: relative;
 
