--- a/src/modules/Home/Intro.scss
+++ b/src/modules/Home/Intro.scss
@@ -95,7 +95,7 @@
 }
 
 .hero.component {
-  padding-top: 56px;
+  margin-top: 32px;
 
   .inner .text.content {
     max-width: 100%;
@@ -124,6 +124,7 @@
   }
 
   @media (max-width: 767px) {
-    padding-top: 0;
+    margin-top: 0;
+    border-top: 1px solid rgba($color: #18181b, $alpha: 0.8)
   }
 }
